# Password_manager_CAA

./: Cargo.toml  README.md
src/: ca.rs  common.rs  crypto.rs  error.rs  file.rs  file_access.rs  input.rs  login.rs  main.rs  password.rs  register.rs  secure_menu.rs  shared_file.rs  user_file.rs
src/cli/: login.rs  mod.rs  register.rs  secure_menu.rs
src/cli/commands/: add_password.rs  change_master_password.rs  generate_password.rs  mod.rs  share_password.rs  show_password.rs  utils.rs  verify_password.rs
src/data/: identity.rs  mod.rs  password.rs  private.rs  public.rs  shared.rs  traits.rs  user.rs
