[package]
name = "caa_labo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "0.8", features = ["v5"] }
once_cell = "1.10.0"
hex = "0.4.3"

argon2 = "0.4.0"
sha2 = "0.10.2"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
secrecy = "0.8.0"
chacha20poly1305 = {version = "0.9.0"}
constant_time_eq = "0.2.2"