[package]
name = "caa_labo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "0.8", features = ["v5"] }
once_cell = "1.10.0"
hex = "0.4.3"
zxcvbn = "2.2.1"

argon2 = "0.4.0"
sha2 = "0.10.2"
rand = "0.8.5"
rand-7 = { package = "rand", version = "0.7.3" }
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
chacha20poly1305 = { version = "0.9.0" }
constant_time_eq = "0.2.2"
hkdf = "0.12.3"
ecies-ed25519 = { version = "0.5.1", features = ["serde"] }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }